--- a/src/main/resources/templates/customers/create.html
+++ b/src/main/resources/templates/customers/create.html
@@ -4,182 +4,41 @@
 <body>
 
 <section class="layout-content" layout:fragment="corpo">
-	<div class="page-header">
-		<nav class="navbar navbar-expand-md navbar-top bg-light">
-			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<i class="oi oi-caret-right"></i>
-						<span>Cadastrar Cliente</span>
-					</li>
-				</ul>
-			</div>
-			<a class="btn btn-primary btn-md" href="@{/customers/search}" role="button">
-				<span class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
-				<span>Buscar Cliente</span>
+
+	<nav class="navbar navbar-expand-md bg-light">
+		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<i class="oi oi-caret-right"></i>
+					<span>Cadastrar Cliente</span>
+				</li>
+			</ul>
+			<a class="btn btn-primary btn-md" href="/customers/search"
+			   role="button">
+				<span class="oi oi-spreadsheet" title="Procurar Clientes"
+					  aria-hidden="true"></span>
+				<span>Listar Clientes</span>
 			</a>
-		</nav>
-	</div>
+		</div>
+	</nav>
 
 	<div class="container" id="cadastro">
-		<form action="/customers/create" method="POST">
+
+		<div th:replace="fragments/alert"></div>
+
+		<form th:action="${customers.id == null} ? @{/customers/create} : @{/customers/edit}"
+			  th:object="${customers}" method="POST">
 			<div class="form-row">
 				<div class="form-group col-md-6">
 					<label for="nome">Nome</label>
 					<input type="text" class="form-control" id="nome"
-						   placeholder="Nome Completo"
-						   autofocus="autofocus" name="nome" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-				<div class="form-group col-md-6">
-					<label for="telefone">Telefone</label>
-                    <input type="text" class="form-control" id="telefone" data-mask="## #####.####00 00000-0000"
-                            placeholder="(00) 12345-1234" maxlength="14"
-						    data-mask-reverse="true" name="telefone" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
+						   placeholder="Nome Completo" autofocus="autofocus" th:field="*{name}"/>
 				</div>
 			</div>
-			<div class="form-row">
-				<div class="form-group col-md-6">
-					<label for="dataNasc">Data de Nascimento</label>
-					<input type="date" class="form-control" id="dataNasc"
-						   name="dataNasc" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-				<div class="form-group col-md-6">
-					<label for="dataSaida">Data de Saída</label>
-					<input type="date" class="form-control" id="dataSaida"
-						   name="dataSaida" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-group col-md-6">
-					<label for="cargo">Cargo</label>
-					<select id="cargo" class="form-control" name="cargo">
-						<option value="">Selecione...</option>
-						<option value="1">Auxiliar Contábil</option>
-						<option value="2">Auxiliar Administrativo</option>
-						<option value="3">Contador</option>
-						<option value="4">Adminitrador</option>
-						<option value="5">Programado PHP</option>
-						<option value="6">Desenvolvedor Java Jr.</option>
-						<option value="7">Desenvolvedor Java Pleno</option>
-						<option value="8">Desenvolvedor Java Senior</option>
-						<option value="9">Auxiliar de RH</option>
-						<option value="10">Coordenador de RH</option>
-						<option value="11">Psicologo</option>
-					</select>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-group col-md-6">
-					<label for="cidade">Cidade</label>
-					<input type="text" class="form-control" id="cidade"
-						   name="endereco.cidade" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-				<div class="form-group col-md-6">
-					<label for="logradouro">Logradouro</label>
-					<input type="text" class="form-control" id="logradouro"
-						   placeholder="logradouro sem número"
-						   name="endereco.logradouro" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-group col-md-6">
-					<label for="numero">Número</label>
-					<input type="text" class="form-control" id="numero"
-						   name="endereco.numero" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-				<div class="form-group col-md-6">
-					<label for="complemento">Complemento</label>
-					<input type="text" class="form-control" id="complemento"
-						   placeholder="Exemplo: AP 5 Bloco 2"
-						   name="endereco.complemento" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-			</div>
-			<div class="form-row">
-				<div class="form-group col-md-6">
-					<label for="bairro">Bairro</label>
-					<input type="text" class="form-control" id="bairro"
-						   name="endereco.bairro" value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-				<div class="form-group col-md-4">
-					<label for="uf">UF</label>
-					<select id="uf" class="form-control" name="endereco.uf">
-						<option value="">Selecione...</option>
-						<option value="AC">AC</option>
-						<option value="AL">AL</option>
-						<option value="AM">AM</option>
-						<option value="BA">BA</option>
-						<option value="CE">CE</option>
-						<option value="DF">DF</option>
-						<option value="ES">ES</option>
-						<option value="GO">GO</option>
-						<option value="MA">MA</option>
-						<option value="MT">MT</option>
-						<option value="MS">MS</option>
-						<option value="MG">MG</option>
-						<option value="PA">PA</option>
-						<option value="PB">PB</option>
-						<option value="PR">PR</option>
-						<option value="PE">PE</option>
-						<option value="PI">PI</option>
-						<option value="RJ">RJ</option>
-						<option value="RN">RN</option>
-						<option value="RS">RS</option>
-						<option value="RO">RO</option>
-						<option value="RR">RR</option>
-						<option value="SC">SC</option>
-						<option value="SP">SP</option>
-						<option value="SE">SE</option>
-						<option value="TO">TO</option>
-					</select>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-				<div class="form-group col-md-2">
-					<label for="cep">Cep</label>
-					<input type="text" class="form-control" id="cep"
-						   data-mask="00000-000" name="endereco.cep"
-						   value=""/>
-					<div class="invalid-feedback">
-
-					</div>
-				</div>
-			</div>
-			<input type="hidden" id="id" name="id" value=""/>
+			<input type="hidden" id="id" th:field="*{id}"/>
 			<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
 		</form>
 	</div>
 </section>
 </body>
 </html>
-
