--- a/src/main/resources/templates/customers/search.html
+++ b/src/main/resources/templates/customers/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}">
+<html layout:decorate="~{layout}" xmlns:th="http://www.w3.org/1999/xhtml">
 <head><meta charset="UTF-8"/></head>
 <body>
 
@@ -28,21 +28,22 @@
 			<table class="table table-striped table-hover table-sm">
 				<thead>
 				<tr>
-					<th>#</th>
 					<th>Nome</th>
-					<th>Ação</th>
+					<th>Telefone</th>
+					<th>Endereço</th>
 				</tr>
 				</thead>
 				<tbody>
 				<tr th:each="cli : ${customers}">
-					<td th:text="${cli._id}"></td>
 					<td th:text="${cli.firstName}"></td>
+					<td th:text="${cli.phone}"></td>
+					<td th:text="${cli.address.street}"></td>
 					<td colspan="2">
-						<a class="btn btn-info btn-sm" th:href="@{/customers/editar/{id} (id=${d.id}) }"
+						<a class="btn btn-info btn-sm" th:href="@{/customers/edit/{id} (id=${cli.id}) }"
 						   role="button">
 							<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 						</a>
-						<button th:id="${ 'btn_departamentos/excluir/' + d.id}" type="button"
+						<button th:id="${ 'btn_departamentos/excluir/' + cli.id}" type="button"
 								class="btn btn-danger btn-sm"
 								data-toggle="modal" data-target="#myModal">
 							<span class="oi oi-circle-x" title="Exclusão desabilitada"
@@ -70,12 +71,12 @@
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
 					<i class="oi oi-caret-right"></i>
-					<span>Lista de Departamentos</span>
+					<span>Lista de Clientes</span>
 				</li>
 			</ul>
-			<a class="btn btn-primary btn-md" href="/departamentos/cadastrar" role="button">
+			<a class="btn btn-primary btn-md" href="/customers/create" role="button">
 				<span class="oi oi-plus" title="Cadastro" aria-hidden="true"></span>
-				<span>Novo Departamento</span>
+				<span>Novo Cliente</span>
 			</a>
 		</div>
 	</nav>
@@ -88,21 +89,22 @@
 			<table class="table table-striped table-hover table-sm">
 				<thead>
 				<tr>
-					<th>#</th>
 					<th>Nome</th>
-					<th>Ação</th>
+					<th>Telefone</th>
+					<th>Endereço</th>
 				</tr>
 				</thead>
 				<tbody>
-				<tr th:each="d : ${departamentos}">
-					<td th:text="${d.id}"></td>
-					<td th:text="${d.nome}"></td>
+				<tr th:each="cli : ${customers}">
+					<td th:text="${cli.firstName}"></td>
+					<td th:text="${cli.phone}"></td>
+					<td th:text="${cli.address.street}"></td>
 					<td colspan="2">
-						<a class="btn btn-info btn-sm" th:href="@{/departamentos/editar/{id} (id=${d.id}) }"
+						<a class="btn btn-info btn-sm" th:href="@{/customers/edit/{id} (id=${cli.id}) }"
 						   role="button">
 							<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 						</a>
-						<button th:id="${ 'btn_departamentos/excluir/' + d.id}" type="button"
+						<button th:id="${ 'btn_departamentos/excluir/' + cli.id}" type="button"
 								class="btn btn-danger btn-sm"
 								data-toggle="modal" data-target="#myModal">
 							<span class="oi oi-circle-x" title="Exclusão desabilitada"
