--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -12,7 +12,7 @@
     <ul class="nav nav-pills">
         <li class="nav-item"><span class="nav-link active" >Clientes</span></li>
         <li class="nav-item"><a class="nav-link"
-                                href="/customers/create"> <i class="oi oi-plus"></i>
+                                href="/customers/register"> <i class="oi oi-plus"></i>
             <span>Cadastrar</span>
         </a></li>
         <li class="nav-item"><a class="nav-link"
